tiny collapse animation fix for nested subnavs

--- a/src/css/docs/components/docs-sidebar.css
+++ b/src/css/docs/components/docs-sidebar.css
@@ -414,7 +414,15 @@
   transition: transform .4s ease, opacity .4s ease;
 }
 
-.DocsSidebar--nav-item[is-expanded] .DocsSidebar--nav-item-collapse-content {
+/*
+This is a bit of an annoyance, but if we don’t
+use > selectors all the way down, nested subnavs
+won’t transition properly */
+.DocsSidebar--nav-item[is-expanded] >
+.DocsSidebar--nav-item-collapse-container >
+.DocsSidebar--nav-item-collapse-wrapper >
+.DocsSidebar--nav-item-collapse-wrapperInner >
+.DocsSidebar--nav-item-collapse-content {
   opacity: 1;
   transform: translate3d(0, 0, 0);
 }
